style: Fix nav arrow alignment for flex buttons

--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
 }
 
 /* move nested nav arrows to the right */
+#navigation-items li[data-title] > button.group.flex,
 #navigation-items li[data-title] > button.group,
 #navigation-items li[data-title] > div.group {
   flex-direction: row-reverse !important;
   justify-content: space-between !important;
 }
 
+#navigation-items li[data-title] > button.group.flex > svg,
 #navigation-items li[data-title] > button.group > svg,
 #navigation-items li[data-title] > div.group > svg {
   margin-right: 0 !important;
